--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         <h3 class="header-title">404 not found</h3>
         <div class="container-div">
           <div class="banner-img">
-            <img src="resources/Scarecrow.png" alt="" />
+            <img src="resources/Scarecrow.png" alt="" width="600" height="600"/>
           </div>
-          <div>
-            <h2 class="banner-text">I have bad news for you</h2>
+          <div class="text-container">
+            <h2 class="banner-text">I have bad news <br> for you</h2>
             <p class="banner-des">
-              The page you are looking for might be removed or is temporarily
+              The page you are looking <br> for might be removed or is <br> temporarily
               unavailable
             </p>
             <button class="btn-primary">Back to homepage</button>
@@ -28,7 +28,7 @@
 
     <footer class="footer-section">
       <div>
-        <p>created by <span>username</span> - devChallenges.io</p>
+        <p>created by <span>HasnathAhmedTamim</span> - devChallenges.io</p>
       </div>
     </footer>
   </body>
