--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <link rel="stylesheet" href="styles/styles.css" />
   </head>
   <body>
-    <main>
-      <section class="main-section">
+    <main class="">
+      <section class="main-section  ">
         <h3 class="header-title">404 not found</h3>
-        <div class="container-div">
+        <div class="container-div  ">
           <div class="banner-img">
             <img src="resources/Scarecrow.png" alt="" width="600" height="600"/>
           </div>
-          <div class="text-container">
+          <div class="text-container  ">
             <h2 class="banner-text">I have bad news <br> for you</h2>
             <p class="banner-des">
-              The page you are looking <br> for might be removed or is <br> temporarily
+              The page you are looking for might be removed or is  temporarily
               unavailable
             </p>
             <button class="btn-primary">Back to homepage</button>
@@ -26,8 +26,8 @@
       </section>
     </main>
 
-    <footer class="footer-section">
-      <div>
+    <footer class="footer-section ">
+      <div class="footer-text">
         <p>created by <span>HasnathAhmedTamim</span> - devChallenges.io</p>
       </div>
     </footer>
